[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmedge_wasi_socket = "0.3"

parsed = { version = "0.3", features = ["http"] }

anyhow = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"